[package]
name = "clipboard"
version = "0.5.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
description = "rust-clipboard is a cross-platform library for getting and setting the contents of the OS-level clipboard."
repository = "https://github.com/aweinstock314/rust-clipboard"
license = "MIT / Apache-2.0"
keywords = ["clipboard"]

[target.'cfg(windows)'.dependencies]
clipboard-win = "3.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
objc_id = "0.1.1"
objc-foundation = "0.1.1"

[target.'cfg(any(target_os = "linux", target_os = "openbsd"))'.dependencies]
x11-clipboard = "0.5.1"
